新增付款页面

--- a/src/assets/styles/constant/variables.scss
+++ b/src/assets/styles/constant/variables.scss
@@ -1,5 +1,5 @@
 $bodyBg:#EDF1F6;
-$headerColor: #1D84EF;
+$headerColor: #f58e01;
 $white: #ffffff;
 $sideWidth: 200px;
 $fc1: #232323;
@@ -11,6 +11,8 @@ $l_menu_w:  135px;
 
 $br4: 4px;
 
-$main_c1: #1D84EF;
+$main_c1:#f58e01;
 $main_c2: #666;
-$main_c3: #092266;
+$main_c3: #6C6C6C;
+$linkColor: #1D84EF;
+$hoverColor: #e18200;
