--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -6,6 +6,9 @@
 @import "reset.element.ui";
 // 常量
 @import "./constant/index";
+// 字体图表 
+@import url('//at.alicdn.com/t/font_2131171_3gy31fdn1u6.css');
+
 html,body,#app {
   height: 100%;
 }
