--- a/src/containers/tenants/index.scss
+++ b/src/containers/tenants/index.scss
@@ -30,16 +30,20 @@
     width: 100%;
   }
   .el-upload + .el-upload__tip {
-    margin: 0;
-    line-height: 12px;
+    margin: 0 0 5px 0;
+    line-height: 8px;
     color: #999; 
   }
+}
+// el css
+.el-form-item__error {
+  padding-top: 0;
 }
 .el-input {
   width: 240px;
 }
 .el-form--inline .el-form-item{
-  margin-bottom: 12px;
+  margin-bottom: 18px;
   padding-right: 120px;
 }
 .el-upload-dragger {
@@ -50,4 +54,8 @@
     margin: 0;
     line-height: 40px;
   }
+  
 } 
+.upload-demo + .el-form-item__error {
+  top: initial;
+}
