--- a/src/assets/styles/common.scss
+++ b/src/assets/styles/common.scss
@@ -1,14 +1,6 @@
-
-@import "~@/assets/styles/constant/index.scss";
-
-
+ 
 // 字体图标
-@font-face {
-  font-family: 'iconfont';  /* Project id 2131171 */
-  src: url('//at.alicdn.com/t/font_2131171_41c4bs6ucg5.woff2?t=1622615143352') format('woff2'),
-       url('//at.alicdn.com/t/font_2131171_41c4bs6ucg5.woff?t=1622615143352') format('woff'),
-       url('//at.alicdn.com/t/font_2131171_41c4bs6ucg5.ttf?t=1622615143352') format('truetype');
-}
+ 
 .iconfont {
   font-family: "iconfont" !important;
   font-size: 12px;
@@ -32,7 +24,7 @@ body {
 
 a {
   text-decoration: none;
-  color: $main_c1;
+  color: $linkColor;
   cursor: pointer;
 }
 
@@ -100,8 +92,8 @@ a {
   .el-tree-node__expand-icon.expanded:before {
     width: 12px;
     height: 12px;
-    background: #1D84EF;
-    border: 1px solid #1D84EF;
+    background: $main_c1;
+    border: 1px solid $main_c1;
     font-size: 16px;
     color: #fff;
     text-align: center;
@@ -229,7 +221,7 @@ button.w120 {
   }
 }
 .el-form-item__label {
-  color: #232323;
+  color: $fc1;
 }
 .red_color,
 a.red_color {
@@ -265,8 +257,9 @@ a.red_color {
     margin-top: -2px;
   }
 }
+
 .back { 
-  color: #092266;
+  color: $main_c3;
   cursor: pointer;
   font-size: 16px;
   &:hover {
@@ -319,7 +312,7 @@ a.red_color {
 }
 .el-button.default_btn {
   background: $white;
-  border: 1px solid #1D84EF;
+  border: 1px solid $main_c1;
   color: $main_c1;
 }
 
@@ -333,7 +326,7 @@ a.red_color {
   display: flex;
   height: 32px;
   background: #fff;
-  border: 1px solid #1D84EF;
+  border: 1px solid $main_c1;
   border-radius: 4px;
 
   li {
@@ -347,7 +340,7 @@ a.red_color {
       font-size: 14px;
     }
     &.active {
-      background: #1D84EF;
+      background: $main_c1;
       color: #fff;
     }
   }
@@ -357,7 +350,7 @@ a.red_color {
     cursor: pointer;
   }
   .active {
-    color: #1D84EF;
+    color: $main_c1;
     position: relative;
     &::after {
       content: "";
@@ -365,7 +358,7 @@ a.red_color {
       position: absolute;
       height: 2px;
       width: 24px;
-      background: #1D84EF;
+      background: $main_c1;
       left: 50%;
       -webkit-transform: translateX(-50%);
       -ms-transform: translateX(-50%);
@@ -518,7 +511,7 @@ p.fs16_title {
   padding: 16px;
   h3 {
     font-size: 16px;
-    color: #092266;
+    color: $main_c3;
     font-weight: 400;
   }
   h3 span {
@@ -570,7 +563,7 @@ i.edit_icon {
   width: 104px;
   height: 64px;
   background: #FFFFFF;
-  border: 1px solid #1D84EF; 
+  border: 1px solid $main_c1; 
   box-shadow: 0px 3px 6px rgba(129, 143, 180, 0.15); 
   border-radius: 4px;
   text-align: center;
@@ -584,14 +577,14 @@ i.edit_icon {
     height: 0;
     border-width: 6px 4px 6px;
     border-style: solid;
-    border-color: transparent   transparent #1D84EF transparent;
+    border-color: transparent   transparent $main_c1 transparent;
   }
   p {
     width: 100% !important;
   }
   p:hover,
   p.active {
-    background: #1D84EF;
+    background: $main_c1;
     color: #fff;
   }
 }
@@ -717,7 +710,7 @@ input::-webkit-input-placeholder {
   color: #498FFF;
 }
 .fc_red {
-  color: #FA4B6C;
+  color:#ff2832;
 }
 .el-table__row .operation a.fc_red, .el-table .cell a.fc_red, .el-table th > .cell a.fc_red{
   color: red;
